@@ -1,5 +1,7 @@
 package com.nahora.security;
 
+import com.nahora.model.Admin;
+import com.nahora.model.Profissional;
 import com.nahora.repositories.UsuarioRepository;
 import com.nahora.services.JwtService;
 import jakarta.servlet.FilterChain;
@@ -9,13 +11,14 @@ import jakarta.servlet.http.HttpServletResponse;
 import lombok.RequiredArgsConstructor;
 import org.springframework.lang.NonNull;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.web.authentication.WebAuthenticationDetailsSource;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
-import java.util.Collections;
+import java.util.List;
 
 @Component
 @RequiredArgsConstructor
@@ -45,8 +48,11 @@ public class JwtAuthFilter extends OncePerRequestFilter {
                 if (email != null && SecurityContextHolder.getContext().getAuthentication() == null) {
                     usuarioRepository.findByEmail(email).ifPresent(usuario -> {
                         if (Boolean.TRUE.equals(usuario.getAtivo())) {
+                            String role = usuario instanceof Admin ? "ROLE_ADMIN"
+                                    : usuario instanceof Profissional ? "ROLE_PROFISSIONAL"
+                                    : "ROLE_CLIENTE";
                             UsernamePasswordAuthenticationToken authToken =
-                                    new UsernamePasswordAuthenticationToken(usuario, null, Collections.emptyList());
+                                    new UsernamePasswordAuthenticationToken(usuario, null, List.of(new SimpleGrantedAuthority(role)));
                             authToken.setDetails(new WebAuthenticationDetailsSource().buildDetails(request));
                             SecurityContextHolder.getContext().setAuthentication(authToken);
                         }
